--- a/_categorys/6.markdown
+++ b/_categorys/6.markdown
@@ -5,51 +5,68 @@ description: 读司马迁资治通鉴札记
 img: /img/collections/6.jpg
 ---
 
-Every project has a beautiful feature shocase page. It's easy to include images, in a flexible 3-column grid format. Make your photos 1/3, 2/3, or full width.
-
-To give your project a background in the portfolio page, just add the img tag to the front matter like so: 
-
-	---
-	layout: post
-	title: Project
-	description: a project with a background image
-	img: /img/12.jpg
-	---
-
-
-<div class="img_row">
-	<img class="col one" src="{{ site.baseurl }}/img/1.jpg" alt="" title="example image"/>
-	<img class="col one" src="{{ site.baseurl }}/img/2.jpg" alt="" title="example image"/>
-	<img class="col one" src="{{ site.baseurl }}/img/3.jpg" alt="" title="example image"/>
-</div>
-<div class="col three caption">
-	Caption photos easily. On the left, a road goes through a tunnel. Middle, leaves artistically fall in a hipster photoshoot. Right, in another hipster photoshoot, a lumberjack grasps a handful of pine needles.
-</div>
-<div class="img_row">
-	<img class="col three" src="{{ site.baseurl }}/img/5.jpg" alt="" title="example image"/>
-</div>
-<div class="col three caption">
-	This image can also have a caption. It's like magic. 
-</div>
-
-You can also put regular text between your rows of images. Say you wanted to write a little bit about your project before you posted the rest of the images. You describe how you toiled, sweated, *bled* for your project, and then.... you reveal it's glory in the next row of images.
-
-
-<div class="img_row">
-	<img class="col two" src="{{ site.baseurl }}/img/6.jpg" alt="" title="example image"/>
-	<img class="col one" src="{{ site.baseurl }}/img/11.jpg" alt="" title="example image"/>
-</div>
-<div class="col three caption">
-	You can also have artistically styled 2/3 + 1/3 images, like these.
-</div>
-
-
-<br/><br/><br/>
-
-
-The code is simple. Just add a col class to your image, and another class specifying the width: one, two, or three columns wide. Here's the code for the last row of images above: 
-
-	<div class="img_row">
-	  <img class="col two" src="/img/6.jpg"/>
-	  <img class="col one" src="/img/11.jpg"/>
-	</div>
+<ul class="post-list">
+    <li>
+        <h2><a class="post-title" href="/2022/11/25/%E8%AF%BB-%E8%B5%84%E6%B2%BB%E9%80%9A%E9%89%B4-%E6%9C%AD%E8%AE%B0-%E4%B8%80.html">读《资治通鉴》札记（一）从三家灭智说起</a></h2>
+        <p class="post-meta">November 25, 2022 — 05:01</p>
+        <p>读《资治通鉴》札记（一）从三家灭智说起</p>
+        <br>
+        <hr>
+    </li>
+	<li>
+        <h2><a class="post-title" href="/2022/12/02/%E8%AF%BB-%E8%B5%84%E6%B2%BB%E9%80%9A%E9%89%B4-%E6%9C%AD%E8%AE%B0-%E4%BA%8C.html">读《资治通鉴》札记（二）豫让复仇，齐威王强齐，魏惠王之立</a></h2>
+        <p class="post-meta">December 2, 2022 — 05:01</p>
+        <p>读《资治通鉴》札记（二）豫让复仇，齐威王强齐，魏惠王之立</p>
+        <br>
+        <hr>
+    </li>
+	<li>
+        <h2><a class="post-title" href="/2022/11/27/%E8%AF%BB-%E8%B5%84%E6%B2%BB%E9%80%9A%E9%89%B4-%E6%9C%AD%E8%AE%B0-%E4%B8%89.html">读《资治通鉴》札记（三）申不害商鞅变法，孟尝君，孙膑庞涓事</a></h2>
+        <p class="post-meta">November 27, 2022 — 05:01</p>
+        <p>读《资治通鉴》札记（三）申不害商鞅变法，孟尝君，孙膑庞涓事</p>
+        <br>
+        <hr>
+    </li>
+	<li>
+        <h2><a class="post-title" href="/2022/11/28/%E8%AF%BB-%E8%B5%84%E6%B2%BB%E9%80%9A%E9%89%B4-%E6%9C%AD%E8%AE%B0-%E5%9B%9B.html">读《资治通鉴》札记（四）司马错伐蜀，张仪，赵武灵王，孟尝君</a></h2>
+        <p class="post-meta">November 28, 2022 — 05:01</p>
+        <p>读《资治通鉴》札记（四）司马错伐蜀，张仪，赵武灵王，孟尝君</p>
+        <br>
+        <hr>
+    </li>
+	<li>
+        <h2><a class="post-title" href="/2022/11/29/%E8%AF%BB-%E8%B5%84%E6%B2%BB%E9%80%9A%E9%89%B4-%E6%9C%AD%E8%AE%B0-%E4%BA%94.html">读《资治通鉴》札记（五）沙丘之围，乐毅攻齐廉颇蔺相如田单复齐</a></h2>
+        <p class="post-meta">November 29, 2022 — 05:01</p>
+        <p>读《资治通鉴》札记（五）沙丘之围，乐毅攻齐廉颇蔺相如田单复齐</p>
+        <br>
+        <hr>
+    </li>
+	<li>
+        <h2><a class="post-title" href="/2022/11/30/%E8%AF%BB-%E8%B5%84%E6%B2%BB%E9%80%9A%E9%89%B4-%E6%9C%AD%E8%AE%B0-%E5%85%AD.html">读《资治通鉴》札记（六）长平之战，范睢信陵君武安君吕不韦之事</a></h2>
+        <p class="post-meta">November 30, 2022 — 05:01</p>
+        <p>读《资治通鉴》札记（六）长平之战，范睢信陵君武安君吕不韦之事</p>
+        <br>
+        <hr>
+    </li>
+	<li>
+        <h2><a class="post-title" href="/2022/12/01/%E8%AF%BB-%E8%B5%84%E6%B2%BB%E9%80%9A%E9%89%B4-%E6%9C%AD%E8%AE%B0-%E4%B8%83.html">读《资治通鉴》札记（七）荀子论兵信陵君救魏秦王扫六合荆轲刺秦</a></h2>
+        <p class="post-meta">December 1, 2022 — 05:01</p>
+        <p>读《资治通鉴》札记（七）荀子论兵信陵君救魏秦王扫六合荆轲刺秦</p>
+        <br>
+        <hr>
+    </li>
+	<li>
+        <h2><a class="post-title" href="/2022/12/02/%E8%AF%BB-%E8%B5%84%E6%B2%BB%E9%80%9A%E9%89%B4-%E6%9C%AD%E8%AE%B0-%E5%85%AB.html">读《资治通鉴》札记（八）称皇帝设郡县一度量，封禅泰山，始皇崩二世立</a></h2>
+        <p class="post-meta">December 2, 2022 — 05:01</p>
+        <p>读《资治通鉴》札记（八）称皇帝设郡县一度量，封禅泰山，始皇崩二世立</p>
+        <br>
+        <hr>
+    </li>
+	<li>
+        <h2><a class="post-title" href="/2022/12/03/%E8%AF%BB-%E8%B5%84%E6%B2%BB%E9%80%9A%E9%89%B4-%E6%9C%AD%E8%AE%B0-%E4%B9%9D.html">读《资治通鉴》札记（九）秦二世立赵高指鹿为马天下土崩瓦解</a></h2>
+        <p class="post-meta">December 3, 2022 — 05:01</p>
+        <p>读《资治通鉴》札记（九）秦二世立赵高指鹿为马天下土崩瓦解</p>
+        <br>
+        <hr>
+    </li>
+</ul>
