--- a/_categorys/1.markdown
+++ b/_categorys/1.markdown
@@ -5,51 +5,180 @@ description: 日常散文随记等
 img: /img/collections/1.jpg
 ---
 
-Every project has a beautiful feature shocase page. It's easy to include images, in a flexible 3-column grid format. Make your photos 1/3, 2/3, or full width.
-
-To give your project a background in the portfolio page, just add the img tag to the front matter like so: 
-
-	---
-	layout: post
-	title: Project
-	description: a project with a background image
-	img: /img/12.jpg
-	---
-
-
-<div class="img_row">
-	<img class="col one" src="{{ site.baseurl }}/img/1.jpg" alt="" title="example image"/>
-	<img class="col one" src="{{ site.baseurl }}/img/2.jpg" alt="" title="example image"/>
-	<img class="col one" src="{{ site.baseurl }}/img/3.jpg" alt="" title="example image"/>
-</div>
-<div class="col three caption">
-	Caption photos easily. On the left, a road goes through a tunnel. Middle, leaves artistically fall in a hipster photoshoot. Right, in another hipster photoshoot, a lumberjack grasps a handful of pine needles.
-</div>
-<div class="img_row">
-	<img class="col three" src="{{ site.baseurl }}/img/5.jpg" alt="" title="example image"/>
-</div>
-<div class="col three caption">
-	This image can also have a caption. It's like magic. 
-</div>
-
-You can also put regular text between your rows of images. Say you wanted to write a little bit about your project before you posted the rest of the images. You describe how you toiled, sweated, *bled* for your project, and then.... you reveal it's glory in the next row of images.
-
-
-<div class="img_row">
-	<img class="col two" src="{{ site.baseurl }}/img/6.jpg" alt="" title="example image"/>
-	<img class="col one" src="{{ site.baseurl }}/img/11.jpg" alt="" title="example image"/>
-</div>
-<div class="col three caption">
-	You can also have artistically styled 2/3 + 1/3 images, like these.
-</div>
-
-
-<br/><br/><br/>
-
-
-The code is simple. Just add a col class to your image, and another class specifying the width: one, two, or three columns wide. Here's the code for the last row of images above: 
-
-	<div class="img_row">
-	  <img class="col two" src="/img/6.jpg"/>
-	  <img class="col one" src="/img/11.jpg"/>
-	</div>
+<ul class="post-list">
+    <li>
+        <h2><a class="post-title" href="/2022/12/22/%E6%96%B0%E5%86%A0%E6%84%9F%E8%A8%80.html">新冠感言</a></h2>
+        <p class="post-meta">December 22, 2022 — 09:30</p>
+        <p>自上周五出现症状，本周三已逐渐轻微。</p>
+        <br>
+        <hr>
+    </li>
+    <li>
+        <h2><a class="post-title" href="/2022/12/02/2022%E5%B9%B4%E5%86%AC%E5%A4%A9%E7%9A%84%E7%AC%AC%E4%B8%80%E5%9C%BA%E9%9B%AA.html">2022年冬天的第一场雪</a></h2>
+        <p class="post-meta">December 2, 2022 — 21:01</p>
+        <p>记录2022年冬天西安市区的第一场雪</p>
+        <br>
+        <hr>
+    </li>
+    <li>
+        <h2><a class="post-title" href="/2022/03/30/%E6%8E%A5%E5%A8%83%E8%AE%B0.html">接娃记</a></h2>
+        <p class="post-meta">March 30, 2022 — 17:55</p>
+        <p>一次放学时间接娃有感</p>
+        <br>
+        <hr>
+    </li>
+    <li>
+        <h2><a class="post-title" href="/2021/05/01/%E9%80%9B%E8%A5%BF%E5%AE%89%E6%97%A9%E5%B8%82.html">逛西安早市</a></h2>
+        <p class="post-meta">May 1, 2021 — 05:01</p>
+        <p>逛西安早市</p>
+        <br>
+        <hr>
+    </li>
+    <li>
+        <h2><a class="post-title" href="/2021/05/01/%E9%95%90%E4%BA%AC%E4%B9%8B%E9%95%90%E7%9A%84%E8%AF%BB%E9%9F%B3%E8%BE%A8.html">镐京之镐的读音辨</a></h2>
+        <p class="post-meta">May 1, 2021 — 05:01</p>
+        <p>镐京之镐的读音辨</p>
+        <br>
+        <hr>
+    </li>
+    <li>
+        <h2><a class="post-title" href="/2021/05/01/%E7%99%BE%E5%A7%93%E4%B9%8B%E5%90%8D%E8%AE%BA.html">百姓之名论</a></h2>
+        <p class="post-meta">May 1, 2021 — 05:01</p>
+        <p>百姓之名论</p>
+        <br>
+        <hr>
+    </li>
+    <li>
+        <h2><a class="post-title" href="/2021/05/01/%E6%9D%8E%E6%B0%8F%E6%88%92%E5%B7%B1%E4%B9%A6.html">李氏戒己书</a></h2>
+        <p class="post-meta">May 1, 2021 — 05:01</p>
+        <p>李氏戒己书</p>
+        <br>
+        <hr>
+    </li>
+    <li>
+        <h2><a class="post-title" href="/2021/05/01/%E6%9D%8E%E6%B0%8F%E6%88%92%E5%AD%90%E4%B9%A6.html">李氏戒子书</a></h2>
+        <p class="post-meta">May 1, 2021 — 05:01</p>
+        <p>李氏戒子书</p>
+        <br>
+        <hr>
+    </li>
+    <li>
+        <h2><a class="post-title" href="/2021/05/01/%E6%9B%B2%E6%B1%9F%E8%BD%BB%E8%BD%A8%E8%AE%B0.html">曲江轻轨记</a></h2>
+        <p class="post-meta">May 1, 2021 — 05:01</p>
+        <p>曲江轻轨记</p>
+        <br>
+        <hr>
+    </li>
+    <li>
+        <h2><a class="post-title" href="/2021/05/01/%E5%BF%86%E6%88%91%E7%9A%84%E8%87%AA%E8%A1%8C%E8%BD%A6.html">忆我的自行车</a></h2>
+        <p class="post-meta">May 1, 2021 — 05:01</p>
+        <p>忆我的自行车</p>
+        <br>
+        <hr>
+    </li>
+    <li>
+        <h2><a class="post-title" href="/2021/05/01/%E5%94%90%E5%A4%AA%E5%AE%97%E6%9D%8E%E4%B8%96%E6%B0%91.html">唐太宗李世民</a></h2>
+        <p class="post-meta">May 1, 2021 — 05:01</p>
+        <p>唐太宗李世民</p>
+        <br>
+        <hr>
+    </li>
+    <li>
+        <h2><a class="post-title" href="/2021/05/01/%E5%93%80%E6%82%BC%E6%88%91%E7%9A%84%E8%A1%A8%E5%93%A5.html">哀悼我的表哥</a></h2>
+        <p class="post-meta">May 1, 2021 — 05:01</p>
+        <p>哀悼我的表哥</p>
+        <br>
+        <hr>
+    </li>
+    <li>
+        <h2><a class="post-title" href="/2021/05/01/%E5%91%8A%E5%A4%A9%E4%B8%8B%E7%88%B6%E6%AF%8D%E4%B9%A6.html">告天下父母书</a></h2>
+        <p class="post-meta">May 1, 2021 — 05:01</p>
+        <p>告天下父母书</p>
+        <br>
+        <hr>
+    </li>
+    <li>
+        <h2><a class="post-title" href="/2021/05/01/%E5%8E%86%E7%A8%8B.html">历程</a></h2>
+        <p class="post-meta">May 1, 2021 — 05:01</p>
+        <p>历程</p>
+        <br>
+        <hr>
+    </li>
+    <li>
+        <h2><a class="post-title" href="/2021/05/01/%E8%AF%84%E8%AE%BA%E9%9B%86%E5%90%88.html">评论合集</a></h2>
+        <p class="post-meta">May 1, 2021 — 05:01</p>
+        <p>评论合集</p>
+        <br>
+        <hr>
+    </li>
+    <li>
+        <h2><a class="post-title" href="/2021/05/01/%E8%A5%BF%E5%BA%9C%E5%85%AB%E5%8D%81%E5%B9%B4%E4%BB%A3%E7%94%9F%E6%B4%BB.html">西府八十年代生活</a></h2>
+        <p class="post-meta">May 1, 2021 — 05:01</p>
+        <p>西府八十年代生活</p>
+        <br>
+        <hr>
+    </li>
+    <li>
+        <h2><a class="post-title" href="/2021/05/01/%E8%A5%BF%E5%BA%9C%E5%85%AB%E5%8D%81%E5%B9%B4%E4%BB%A3%E5%AD%A6%E6%A0%A1%E7%94%9F%E6%B4%BB.html">学校生活</a></h2>
+        <p class="post-meta">May 1, 2021 — 05:01</p>
+        <p>学校生活</p>
+        <br>
+        <hr>
+    </li>
+    <li>
+        <h2><a class="post-title" href="/2021/05/01/%E8%A5%BF%E5%BA%9C%E4%BC%A0%E8%AF%B4.html">西府传说</a></h2>
+        <p class="post-meta">May 1, 2021 — 05:01</p>
+        <p>西府传说</p>
+        <br>
+        <hr>
+    </li>
+    <li>
+        <h2><a class="post-title" href="/2021/05/01/%E8%A5%BF%E5%AE%89%E9%AB%98%E6%96%B0%E8%BD%AF%E4%BB%B6%E6%96%B0%E5%9F%8E%E4%BA%91%E8%BD%A8%E5%A4%A9%E8%B0%B7%E5%9B%9B%E8%B7%AF%E5%88%B0%E7%A7%91%E6%8A%80%E8%B7%AF%E6%9C%80%E6%96%B0%E8%AF%A6%E6%83%85.html">西安高新软件新城云轨天谷四路到科技路最新详情</a></h2>
+        <p class="post-meta">May 1, 2021 — 05:01</p>
+        <p>西安高新软件新城云轨天谷四路到科技路最新详情</p>
+        <br>
+        <hr>
+    </li>
+    <li>
+        <h2><a class="post-title" href="/2021/05/01/%E8%A5%BF%E5%AE%89%E8%B5%8F%E7%BB%9D%E4%BD%B3%E9%93%B6%E6%9D%8F%E5%8F%B6%E8%A7%82%E8%B5%8F%E7%82%B9%E5%A4%A7%E5%85%A8.html">西安赏绝佳银杏叶观赏点大全</a></h2>
+        <p class="post-meta">May 1, 2021 — 05:01</p>
+        <p>西安赏绝佳银杏叶观赏点大全</p>
+        <br>
+        <hr>
+    </li>
+    <li>
+        <h2><a class="post-title" href="/2021/05/01/%E8%87%AA%E5%8F%99.html">自叙</a></h2>
+        <p class="post-meta">May 1, 2021 — 05:01</p>
+        <p>自叙</p>
+        <br>
+        <hr>
+    </li>
+    <li>
+        <h2><a class="post-title" href="/2021/05/01/%E8%BD%AF%E4%BB%B6%E4%B8%9A%E5%AD%98%E5%9C%A8%E4%B9%8B%E9%97%AE%E9%A2%98.html">软件业存在之问题</a></h2>
+        <p class="post-meta">May 1, 2021 — 05:01</p>
+        <p>软件业存在之问题</p>
+        <br>
+        <hr>
+    </li>
+    <li>
+        <h2><a class="post-title" href="/2021/05/01/%E4%BA%8C%E9%9B%B6%E9%9B%B6%E5%85%AB%E5%B9%B4%E6%97%A0%E9%94%A1%E5%8D%B0%E8%B1%A1.html">二零零八年无锡印象</a></h2>
+        <p class="post-meta">May 1, 2021 — 05:01</p>
+        <p>零八年大学毕业的时候找了家单位，但是要求先得参加他们的培训。之后第一次来到了真正意义上的江南水乡。对无锡有了深刻的印象。</p>
+        <br>
+        <hr>
+    </li>
+    <li>
+        <h2><a class="post-title" href="/2021/05/01/%E9%92%A9%E6%9E%A3%E5%AD%90.html">钩枣子</a></h2>
+        <p class="post-meta">May 1, 2021 — 05:01</p>
+        <p>钩枣子</p>
+        <br>
+        <hr>
+    </li>
+    <li>
+        <h2><a class="post-title" href="/2015/05/15/%E6%96%90%E8%AE%AFK2%E5%88%B7Breed%E5%92%8C%E6%BD%98%E5%A4%9A%E6%8B%89%E5%9B%BA%E4%BB%B6.html">斐讯K2刷Breed和潘多拉固件</a></h2>
+        <p class="post-meta">May 15, 2015 — 21:01</p>
+        <p>斐讯K2刷Breed和潘多拉固件记录</p>
+        <br>
+        <hr>
+    </li>
+</ul>
