--- a/_categorys/4.markdown
+++ b/_categorys/4.markdown
@@ -5,51 +5,75 @@ description: 日常读书札记
 img: /img/collections/4.jpg
 ---
 
-Every project has a beautiful feature shocase page. It's easy to include images, in a flexible 3-column grid format. Make your photos 1/3, 2/3, or full width.
-
-To give your project a background in the portfolio page, just add the img tag to the front matter like so: 
-
-	---
-	layout: post
-	title: Project
-	description: a project with a background image
-	img: /img/12.jpg
-	---
-
-
-<div class="img_row">
-	<img class="col one" src="{{ site.baseurl }}/img/1.jpg" alt="" title="example image"/>
-	<img class="col one" src="{{ site.baseurl }}/img/2.jpg" alt="" title="example image"/>
-	<img class="col one" src="{{ site.baseurl }}/img/3.jpg" alt="" title="example image"/>
-</div>
-<div class="col three caption">
-	Caption photos easily. On the left, a road goes through a tunnel. Middle, leaves artistically fall in a hipster photoshoot. Right, in another hipster photoshoot, a lumberjack grasps a handful of pine needles.
-</div>
-<div class="img_row">
-	<img class="col three" src="{{ site.baseurl }}/img/5.jpg" alt="" title="example image"/>
-</div>
-<div class="col three caption">
-	This image can also have a caption. It's like magic. 
-</div>
-
-You can also put regular text between your rows of images. Say you wanted to write a little bit about your project before you posted the rest of the images. You describe how you toiled, sweated, *bled* for your project, and then.... you reveal it's glory in the next row of images.
-
-
-<div class="img_row">
-	<img class="col two" src="{{ site.baseurl }}/img/6.jpg" alt="" title="example image"/>
-	<img class="col one" src="{{ site.baseurl }}/img/11.jpg" alt="" title="example image"/>
-</div>
-<div class="col three caption">
-	You can also have artistically styled 2/3 + 1/3 images, like these.
-</div>
-
-
-<br/><br/><br/>
-
-
-The code is simple. Just add a col class to your image, and another class specifying the width: one, two, or three columns wide. Here's the code for the last row of images above: 
-
-	<div class="img_row">
-	  <img class="col two" src="/img/6.jpg"/>
-	  <img class="col one" src="/img/11.jpg"/>
-	</div>
+<ul class="post-list">
+    <li>
+        <h2><a class="post-title" href="/2021/05/01/%E9%95%90%E4%BA%AC%E4%B9%8B%E9%95%90%E7%9A%84%E8%AF%BB%E9%9F%B3%E8%BE%A8.html">镐京之镐的读音辨</a></h2>
+        <p class="post-meta">May 1, 2021 — 05:01</p>
+        <p>镐京之镐的读音辨</p>
+        <br>
+        <hr>
+    </li>
+    <li>
+        <h2><a class="post-title" href="/2021/05/01/%E7%99%BE%E5%A7%93%E4%B9%8B%E5%90%8D%E8%AE%BA.html">百姓之名论</a></h2>
+        <p class="post-meta">May 1, 2021 — 05:01</p>
+        <p>百姓之名论</p>
+        <br>
+        <hr>
+    </li>
+    <li>
+        <h2><a class="post-title" href="/2021/05/01/%E7%99%BD%E8%B5%B7%E4%B9%8B%E6%AD%BB.html">白起之死</a></h2>
+        <p class="post-meta">May 1, 2021 — 05:01</p>
+        <p>白起之死</p>
+        <br>
+        <hr>
+    </li>
+    <li>
+        <h2><a class="post-title" href="/2021/05/01/%E5%8F%A4%E4%BB%A3%E5%9C%B0%E6%96%B9%E5%BF%97%E4%B8%AD%E7%9A%84%E5%9C%B0%E5%90%8D%E7%B1%BB%E5%9E%8B%E7%AE%80%E6%9E%90.html">古代地方志中的地名类型简析</a></h2>
+        <p class="post-meta">May 1, 2021 — 05:01</p>
+        <p>古代地方志中的地名类型简析</p>
+        <br>
+        <hr>
+    </li>
+    <li>
+        <h2><a class="post-title" href="/2021/05/01/%E4%BB%AA%E7%A4%BC%E7%9A%84%E6%A0%B8%E5%BF%83-%E4%BA%94%E6%9C%8D%E5%88%B6%E5%BA%A6.html">仪礼的核心-五服制度</a></h2>
+        <p class="post-meta">May 1, 2021 — 05:01</p>
+        <p>仪礼的核心-五服制度</p>
+        <br>
+        <hr>
+    </li>
+    <li>
+        <h2><a class="post-title" href="/2021/05/01/%E7%B2%97%E8%AF%BB%E5%B1%B1%E6%B5%B7%E7%BB%8F.html">粗读山海经</a></h2>
+        <p class="post-meta">May 1, 2021 — 05:01</p>
+        <p>粗读山海经</p>
+        <br>
+        <hr>
+    </li>
+    <li>
+        <h2><a class="post-title" href="/2021/05/01/%E7%A7%A6%E6%9C%80%E6%97%A9%E6%9D%A5%E6%BA%90%E4%BA%8E%E9%99%88%E4%BB%93%E9%99%87%E5%8E%BF.html">读《史记》有感：秦最早来源于陈仓陇县</a></h2>
+        <p class="post-meta">May 1, 2021 — 05:01</p>
+        <p>读《史记》有感：秦最早来源于陈仓陇县</p>
+        <br>
+        <hr>
+    </li>
+    <li>
+        <h2><a class="post-title" href="/2021/05/01/%E7%A7%A6%E5%A7%8B%E7%9A%87%E5%A7%93%E6%B0%8F%E5%B0%8F%E8%AE%BA.html">秦始皇姓氏小论</a></h2>
+        <p class="post-meta">May 1, 2021 — 05:01</p>
+        <p>秦始皇姓氏小论</p>
+        <br>
+        <hr>
+    </li>
+    <li>
+        <h2><a class="post-title" href="/2021/05/01/%E8%AF%97%E7%BB%8F-%E5%85%AD%E4%B9%89.html">《诗经》六义</a></h2>
+        <p class="post-meta">May 1, 2021 — 05:01</p>
+        <p>《诗经》六义</p>
+        <br>
+        <hr>
+    </li>
+    <li>
+        <h2><a class="post-title" href="/2021/05/01/%E8%AF%97%E7%BB%8F-%E7%A7%A6%E9%A3%8E-%E6%97%A0%E8%A1%A3-%E8%B5%8F%E6%9E%90.html">《诗经》《秦风·无衣》赏析</a></h2>
+        <p class="post-meta">May 1, 2021 — 05:01</p>
+        <p>《诗经》《秦风·无衣》赏析</p>
+        <br>
+        <hr>
+    </li>
+</ul>
