--- a/_posts/2022-03-03-中华简史_三国.md
+++ b/_posts/2022-03-03-中华简史_三国.md
@@ -2,9 +2,8 @@
 layout: post
 title: 中华简史-三国卷
 date: 2022-12-26 09:52:00
-description: 中华简史-三国卷
+description: 魏蜀吴三国鼎立，三国征伐导致大量人口损失。
 ---
-
 
 ## 中华简史-三国卷
 ### 概述
