--- a/_posts/2022-03-03-中华简史_元.md
+++ b/_posts/2022-03-03-中华简史_元.md
@@ -1,8 +1,8 @@
 ---
 layout: post
-title: 中华简史-三国卷
+title: 中华简史-元朝卷
 date: 2022-12-26 09:52:00
-description: 中华简史-三国卷
+description: 铁木真统一蒙古，蒙古人入主中原。
 ---
 
 ## 中华简史-元朝卷
