--- a/_posts/2022-03-03-中华简史_共和国.md
+++ b/_posts/2022-03-03-中华简史_共和国.md
@@ -1,8 +1,8 @@
 ---
 layout: post
-title: 中华简史-三国卷
+title: 中华简史-中华人民共和国卷
 date: 2022-12-26 09:52:00
-description: 中华简史-三国卷
+description: 毛主席，中国共产党领导中华民度进入新的历史时期，开创新征程。
 ---
 
 ## 中华简史-中华人民共和国卷
