--- a/_posts/2022-03-03-中华简史_南北朝.md
+++ b/_posts/2022-03-03-中华简史_南北朝.md
@@ -1,8 +1,8 @@
 ---
 layout: post
-title: 中华简史-三国卷
+title: 中华简史-南北朝卷
 date: 2022-12-26 09:52:00
-description: 中华简史-三国卷
+description: 五胡乱华，中国历史上的第一个大乱世。
 ---
 
 ## 中华简史-南北朝卷
