--- a/_posts/2022-03-03-中华简史_史前.md
+++ b/_posts/2022-03-03-中华简史_史前.md
@@ -1,8 +1,8 @@
 ---
 layout: post
-title: 中华简史-三国卷
+title: 中华简史-史前卷
 date: 2022-12-26 09:52:00
-description: 中华简史-三国卷
+description: 史前时期多以传说为主，但不可不信。
 ---
 
 ## 中华简史-史前卷
