--- a/_posts/2022-03-03-中华简史_周.md
+++ b/_posts/2022-03-03-中华简史_周.md
@@ -1,8 +1,8 @@
 ---
 layout: post
-title: 中华简史-三国卷
+title: 中华简史-周朝卷
 date: 2022-12-26 09:52:00
-description: 中华简史-三国卷
+description: 文王强周，武王灭商，周公定礼，中国历史黄金时期。
 ---
 
 ## 中华简史-周朝卷
