--- a/_posts/2022-03-03-中华简史_唐.md
+++ b/_posts/2022-03-03-中华简史_唐.md
@@ -1,8 +1,8 @@
 ---
 layout: post
-title: 中华简史-三国卷
+title: 中华简史-唐朝卷
 date: 2022-12-26 09:52:00
-description: 中华简史-三国卷
+description: 高祖李渊创立李唐王朝，太宗称天可汗，汉民族的大盛世。
 ---
 
 ## 中华简史-唐朝卷
