--- a/_posts/2022-03-03-中华简史_夏.md
+++ b/_posts/2022-03-03-中华简史_夏.md
@@ -1,8 +1,8 @@
 ---
 layout: post
-title: 中华简史-三国卷
+title: 中华简史-夏朝卷
 date: 2022-12-26 09:52:00
-description: 中华简史-三国卷
+description: 禹传子，家天下，中国历史进入奴隶社会。
 ---
 
 ## 中华简史-夏朝卷
