--- a/_posts/2022-03-03-中华简史_晋.md
+++ b/_posts/2022-03-03-中华简史_晋.md
@@ -1,8 +1,8 @@
 ---
 layout: post
-title: 中华简史-三国卷
+title: 中华简史-晋朝卷
 date: 2022-12-26 09:52:00
-description: 中华简史-三国卷
+description: 司马氏所创，但司马失并不能消灭各种社会矛盾，很快晋朝发生内乱，导致五胡乱华。
 ---
 
 ## 中华简史-晋朝卷
