--- a/_posts/2022-03-03-中华简史_民国.md
+++ b/_posts/2022-03-03-中华简史_民国.md
@@ -1,8 +1,8 @@
 ---
 layout: post
-title: 中华简史-三国卷
+title: 中华简史-中华民国卷
 date: 2022-12-26 09:52:00
-description: 中华简史-三国卷
+description: 国父孙中山灭清，中华民族结束数千年的封建社会。
 ---
 
 ## 中华简史-中华民国卷
