--- a/_posts/2022-03-03-中华简史_汉.md
+++ b/_posts/2022-03-03-中华简史_汉.md
@@ -1,8 +1,8 @@
 ---
 layout: post
-title: 中华简史-三国卷
+title: 中华简史-汉朝卷
 date: 2022-12-26 09:52:00
-description: 中华简史-三国卷
+description: 高祖刘邦创建大汉帝国，中华民族历史上第一个盛世和民族大融和时期。
 ---
 
 ## 中华简史-汉朝卷
