--- a/_posts/2022-03-03-中华简史_清.md
+++ b/_posts/2022-03-03-中华简史_清.md
@@ -2,7 +2,7 @@
 layout: post
 title: 中华简史-三国卷
 date: 2022-12-26 09:52:00
-description: 中华简史-三国卷
+description: 太祖努尔哈赤乘着大名内乱开创清朝，顺治帝入主中原，康熙帝统一中华。
 ---
 
 ## 中华简史-清朝卷
