--- a/_posts/2022-03-03-中华简史_秦.md
+++ b/_posts/2022-03-03-中华简史_秦.md
@@ -1,8 +1,8 @@
 ---
 layout: post
-title: 中华简史-三国卷
+title: 中华简史-秦朝卷
 date: 2022-12-26 09:52:00
-description: 中华简史-三国卷
+description: 经过数百年和几十代秦人奋斗，直到秦王政吞并六国，始称皇帝。
 ---
 
 ## 中华简史-秦朝卷
