--- a/_posts/2022-03-03-中华简史_隋.md
+++ b/_posts/2022-03-03-中华简史_隋.md
@@ -2,7 +2,7 @@
 layout: post
 title: 中华简史-三国卷
 date: 2022-12-26 09:52:00
-description: 中华简史-三国卷
+description: 太祖杨坚创业至炀帝广而亡，呜呼哀哉。
 ---
 
 ## 中华简史-隋朝卷
