--- a/_posts/2022-03-03-中华简史_商.md
+++ b/_posts/2022-03-03-中华简史_商.md
@@ -1,8 +1,8 @@
 ---
 layout: post
-title: 中华简史-三国卷
+title: 中华简史-商朝卷
 date: 2022-12-26 09:52:00
-description: 中华简史-三国卷
+description: 商汤灭夏，创立商王朝。
 ---
 
 ## 中华简史-商朝卷
