--- a/_posts/2022-03-03-中华简史_宋辽金.md
+++ b/_posts/2022-03-03-中华简史_宋辽金.md
@@ -1,8 +1,8 @@
 ---
 layout: post
-title: 中华简史-三国卷
+title: 中华简史-宋辽金卷
 date: 2022-12-26 09:52:00
-description: 中华简史-三国卷
+description: 少数民族入侵中原，民族大融和的重要时期。
 ---
 
 ## 中华简史-宋辽金卷
